results/SVCOMP/conversational/log-startswith-2024_03_15_15_26_44.txt
public class startswith {
    //@ requires request != null;
    //@ ensures \result == true || \result == false;
    public boolean doPost(String request) throws IOException {
        String param = request;
        String[] argsEnv = {param};

        if (param.equals("") && argsEnv[0].equals("GOTCHA")) {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/startswith.java:4: error: cannot find symbol
    public boolean doPost(String request) throws IOException {
                                                 ^
  symbol:   class IOException
  location: class startswith
1 error

public class startswith {
    //@ requires request != null;
    //@ ensures \result == true || \result == false;
    public boolean doPost(String request) {
        String param = request;
        String[] argsEnv = {param};

        if (param.equals("") && argsEnv[0].equals("GOTCHA")) {
            return false;
        }
        return true;
    }
}

